--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -29,14 +29,14 @@
   right: 0px;
   border: none;
   font-size: 15px;
-  background-color: #2f74c0;
+  background-color: #2A9D8F;
   color: white;
   transition: 0.2s all;
   box-shadow: 0 0 10px black;
 }
 
 .input_submit:hover {
-  background-color: #388ae2;
+  background-color: #32bbab;
 }
 
 .input_submit:active {
@@ -58,19 +58,19 @@
   flex-direction: column;
   width: 47.5%;
   padding: 15px;
-  background-color: rgb(50, 195, 205);
+  background-color: #2A9D8F;
 }
 
 .dragactive {
-  background-color: rgb(0, 221, 236);
+  background-color: #2A9D8F;
 }
 
 .dragcomplete {
-  background-color: rgb(255, 38, 0);
+  background-color: #E76F51;
 }
 
 .remove {
-  background-color: rgb(235, 103, 80);
+  background-color: #E76F51;
 }
 
 .todos__heading {
