--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #2f74c0;
+  background-color: #eae2b7;
   font-family: 'Rubik', sans-serif;
 }
 
@@ -14,7 +14,7 @@
   text-transform: uppercase;
   font-size: 40px;
   margin: 30px 0;
-  color: white;
+  color: #264653;
   z-index: 1;
   text-align: center;
 }
